freepbx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: freepbx
  namespace: asterisk
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: sip-udp
      port: 5060
      targetPort: 5060
      protocol: UDP
    - name: sip-tls
      port: 5061
      targetPort: 5061
      protocol: TCP
    - name: rtp-start
      port: 18000
      targetPort: 18000
      protocol: UDP
    - name: rtp-end
      port: 20000
      targetPort: 20000
      protocol: UDP
  selector:
    app: freepbx
