jitsi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jitsi-meet-ingress
  namespace: jitsi
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:505614340215:certificate/04b4225a-6cf8-4eb0-8e5d-ff5f5250a56c
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: www.jitsi.karura.cat
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jitsi-meet-web
                port:
                  number: 80
  tls:
    - hosts:
        - www.jitsi.karura.cat
      secretName: jitsi-tls
